force-app/main/default/objects/Financial_Account__c/fields/checkId__c.field-meta.xml
<CustomField>
    <fullName>checkId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkId</label>
    <type>Checkbox</type>
</CustomField>