force-app/main/default/objects/Financial_Account__c/fields/Client_Account1__c.field-meta.xml
<CustomField>
    <fullName>Client_Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>