force-app/main/default/objects/Financial_Account__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <length>24</length>
    <type>Text</type>
</CustomField>