force-app/main/default/objects/Financial_Account__c/fields/Client_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Number__c</fullName>
    <label>Client Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>