force-app/main/default/objects/Financial_Account__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>23</length>
    <type>Text</type>
</CustomField>